--- a/styles.css
+++ b/styles.css
@@ -1,127 +1,147 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap');
 
-:root{
-    --primary-color: #34a0a4;
-    --secondary-color:  #1a5052;
-}
-body{
-    font-family: 'Cabin', sans-serif;
+* {
     margin: 0;
+    padding: 0;
+}
+
+:root {
+    --primary-color: #34a0a4;
+}
+/* body  */
+body {
+    font-family: 'Cabin', sans-serif;
+    text-align: center;
 }
 /* navigation  */
-nav{
-    text-align: center;
-    color: white;
+nav {
     background-color: var(--primary-color);
-    padding: 0.75rem;
-    border-bottom-left-radius: 2rem;
-}
-
-/* main body  */
-.main{
-    display: flex;
-    flex-direction: column;
-    width: 60vw;
-    text-align: center;
-    margin: auto;
-}
-
-
- .description{
-     font-weight: bold;
-     font-size: 1.3rem;
-     margin: 0.5rem;
- }
-
-
-#cash-given{
-    font-size: 14px;
-  outline: #fff;
-  padding: 0.6rem 1rem;
-  margin: 1rem;
-  border: 2px solid var(--primary-color);
-  border-radius: 0.5rem;
-  width: 100%;
-  max-width: 258px;
-}   
-
-#bill-amount{
-    font-size: 14px;
-  outline: #fff;
-  padding: 0.6rem 1rem;
-  margin: 1rem;
-  border: 2px solid var(--primary-color);
-  border-radius: 0.5rem;
-  width: 100%;
-  max-width: 258px;
-}
-
-.input-label {
-    display: block;
-    font-size: large;
-    font-weight: 600;
-  }
-  
-  .input {
-    font-size: 14px;
-    padding: 0.6rem 1rem;
-    margin: 1rem ;
-    border: 2px solid var(--primary-color);
-    border-radius: 0.5rem;
-    width: 100%;
-    max-width: 2px;
-  }
-
-
-
-#check-button{
-    display: block;
-    margin: auto;
-    padding: 1rem;
     color: white;
-    background-color: var(--primary-color) ;
-    border: none;
+    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+}
+
+nav h1 {
+    padding: 1rem;
+    font-size: 2rem;
+}
+/* description  */
+.description {
+    margin: 2rem;
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+/* both labels  */
+label {
+    font-size: 1.5rem;
+    margin: 1rem;
+}
+/* bill input  */
+#bill-amount {
+    background-color: var(--primary-color);
     border-radius: 1rem;
-    font-size: 120%;
+    margin: 0.5rem;
+    padding: 0.8rem;
+    font-size: 1rem;
+    border: none;
+    color:white ;
+}
+/* cash input  */
+#div-cash-given {
+    margin: 1.5rem;
+    margin-bottom: 0;
+}
+
+#cash-given {
+    background-color: var(--primary-color);
+    border-radius: 1rem;
+    margin: 0.5rem;
+    padding: 0.8rem;
+    font-size: 1rem;
+    border: none;
+    color:white ;
+
+}
+/* button  */
+.btn {
+    padding: 0.7rem;
+    margin: 1.5rem;
+    font-weight: bold;
+    border-radius: 0.5rem;
+    background-color: #b5e48c ;
+    color: var(--primary-color);
+    border: 1px solid black ;
+    cursor: pointer;
+}
+/* error div  */
+#error-message {
+    font-size: 1.5rem;
+    color: red;
+    font-weight: 20px;
 }
 
 /* table  */
-.change-table {
-    width: 50%;
+#output-table {
+    margin: auto;
     text-align: justify;
     border-collapse: collapse;
-    margin: auto;
-  }
-  
-  .change-table caption {
-    margin: 1rem auto;
-    font-size: x-large;
-    font-weight: 500;
-  }
-  
-  th,
-  td {
+}
+
+td, th {
     border: 2px solid var(--primary-color);
     width: 0%;
     border-collapse: collapse;
-    padding: 0.4rem;
-  }
+    padding: 0.5rem;
+}
+.no-of-notes {
+    background-color: white;
+    color: var(--primary-color);
+}
+.output-table caption {
+    margin: 1rem auto;
+    font-size: x-large;
+    font-weight: 500;
+  } 
+
+#return-change {
+    margin: 1rem;
+    margin-top: 0;
+    margin-left: 6rem ;
+    font-weight: bold;
+    font-size: 1.2rem; 
+    
+}
+
+#returning-amount {
+    color: var(--primary-color);
+}
+
+
+
+
 
 
 /* footer  */
-
- footer{
-     border-top-right-radius: 2rem;
-     width: 100%;
-     background-color: var(--primary-color);
-     color: whitesmoke;
-     text-align: center;
-     padding-bottom: 1rem;
- }
+footer{
+    position: fixed;
+    bottom: 0;
+    border-top-right-radius: 2rem;
+    border-top-left-radius: 2rem;
+    width: 100%;
+    background-color: var(--primary-color);
+    color: whitesmoke;
+    padding: 1.5rem 0rem ;
+}
+footer div h2{
+    padding-bottom: 0.6rem;
+}
 .footer-btn{
-     text-decoration: none;
-     color: var(--secondary-color);
-     padding: 0.5rem 1rem;
-     background: white;
-     border-radius: 1rem;
- }
+    text-decoration: none;
+    color: var(--primary-color);
+    padding: 0.5rem 1rem;
+    background: white;
+    border-radius: 1rem;
+    margin: rem ;
+}
+
+
